integ-tests/tests/snapshots/parser__bad_table_names__newline.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-char-in-string]: 
  ┌─ newline:1:3
  │  
1 │   ["
  │ ╭──^
2 │ │ "]
  │ ╰^ invalid character '\n' in string


